--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div class="overview-container hidden">
         <h1>Overview</h1>
         <hr />
+        <!-- Loading icon -->
         <div class="lds-container">
           <div class="lds-ellipsis">
             <div></div>
@@ -38,6 +39,7 @@
             <div></div>
           </div>
         </div>
+
         <div class="overview-element-container">
           <div id="tester2" style="width: 900px; height: 350px">
             <canvas id="myChart2"></canvas>
