--- a/new/index.html
+++ b/new/index.html
@@ -16,10 +16,7 @@
       integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css" />
 
     <!-- Font Awesome CDN -->
     <link
@@ -59,9 +56,7 @@
             <a href="#" class="pure-menu-link" id="btn-coinlist">Coinlist</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link" id="btn-transactions"
-              >Transactions</a
-            >
+            <a href="#" class="pure-menu-link" id="btn-transactions">Transactions</a>
           </li>
         </ul>
       </div>
@@ -74,8 +69,8 @@
         <div class="splash">
           <h1 class="splash-head home-dropzone">Drop .csv here</h1>
           <p class="splash-subhead">
-            Your privacy matters. As this project is exposed to sensitive data,
-            we're 100% open source.
+            Your privacy matters. As this project is exposed to sensitive data, we're 100% open
+            source.
           </p>
           <p>
             <a href="http://purecss.io" class="pure-button pure-button-primary"
@@ -87,9 +82,7 @@
 
       <div class="content-wrapper">
         <div class="content">
-          <h2 class="content-head is-center">
-            Get an insight into your nexo.io account
-          </h2>
+          <h2 class="content-head is-center">Get an insight into your nexo.io account</h2>
 
           <div class="pure-g">
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -125,18 +118,9 @@
 
         <div class="ribbon l-box-lrg pure-g">
           <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-            <i
-              class="fa fa-regular fa-code fa-5x"
-              style="color: var(--primary-color)"
-            ></i>
-            <i
-              class="fa fa-regular fa-code fa-5x"
-              style="color: var(--secondary-color)"
-            ></i>
-            <i
-              class="fa fa-regular fa-code fa-5x"
-              style="color: var(--third-color)"
-            ></i>
+            <i class="fa fa-regular fa-code fa-5x" style="color: var(--primary-color)"></i>
+            <i class="fa fa-regular fa-code fa-5x" style="color: var(--secondary-color)"></i>
+            <i class="fa fa-regular fa-code fa-5x" style="color: var(--third-color)"></i>
           </div>
           <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
             <h2 class="content-head content-head-ribbon">
@@ -150,11 +134,11 @@
               <li>Failed transactions</li>
             </ul>
 
-            It probably just errors out and does nothing. If you're brave enough
-            send me a failed .csv to cheesecake@mom.com.
+            It probably just errors out and does nothing. If you're brave enough send me a failed
+            .csv to cheesecake@mom.com.
             <br />
-            Also, nexo tends to break their .csv export function rather often.
-            as of today it's broken.
+            Also, nexo tends to break their .csv export function rather often. as of today it's
+            broken.
           </div>
         </div>
 
@@ -164,24 +148,19 @@
               <h2>Notice of Non-Affiliation and Disclaimer</h2>
 
               <p>
-                We are not affiliated, associated, authorized, endorsed by, or
-                in any way officially connected with Nexo Financial LLC, or any
-                of its subsidiaries or its affiliates. The official Nexo
-                Financial LLC website can be found at https://www.nexo.io. The
-                name NEXO as well as related names, marks, emblems and images
-                are registered trademarks of their respective owners.
+                We are not affiliated, associated, authorized, endorsed by, or in any way officially
+                connected with Nexo Financial LLC, or any of its subsidiaries or its affiliates. The
+                official Nexo Financial LLC website can be found at https://www.nexo.io. The name
+                NEXO as well as related names, marks, emblems and images are registered trademarks
+                of their respective owners.
               </p>
             </div>
           </div>
-          <img
-            src="https://api.moedog.org/count/@:testingyourmom"
-            alt=":testingyourmom"
-          />
+          <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" />
         </div>
 
         <div class="footer l-box is-center">
-          © Copyright 2021-2022 bandrewk. This is a non-commercial, not
-          monetized website.
+          © Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.
         </div>
       </div>
     </div>
@@ -223,24 +202,19 @@
           <h2>Notice of Non-Affiliation and Disclaimer</h2>
 
           <p>
-            We are not affiliated, associated, authorized, endorsed by, or in
-            any way officially connected with Nexo Financial LLC, or any of its
-            subsidiaries or its affiliates. The official Nexo Financial LLC
-            website can be found at https://www.nexo.io. The name NEXO as well
-            as related names, marks, emblems and images are registered
-            trademarks of their respective owners.
+            We are not affiliated, associated, authorized, endorsed by, or in any way officially
+            connected with Nexo Financial LLC, or any of its subsidiaries or its affiliates. The
+            official Nexo Financial LLC website can be found at https://www.nexo.io. The name NEXO
+            as well as related names, marks, emblems and images are registered trademarks of their
+            respective owners.
           </p>
         </div>
       </div>
-      <img
-        src="https://api.moedog.org/count/@:testingyourmom"
-        alt=":testingyourmom"
-      />
+      <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" />
     </div>
 
     <div class="footer l-box is-center">
-      © Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized
-      website.
+      © Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.
     </div>
   </body>
 </html>
