Added overview graphs
Overview graphs are no working.

--- a/new/index.html
+++ b/new/index.html
@@ -171,10 +171,10 @@
               <hr />
               <div id="overview">
                 <!--<div class="pure-u-5-5 pure-u-lg-3-4 overview-graph" id="ov-graph-portfolio"></div>-->
-                <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-interestearned"></div>
-                <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pdivision"></div>
-                <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-dws"></div>
-                <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-adivision"></div>
+                <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line1"></div>
+                <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie1"></div>
+                <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line2"></div>
+                <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie2"></div>
               </div>
 
               <hr />
