Added loading animation
Added a loading animation and changed startpage to overview

--- a/new/index.html
+++ b/new/index.html
@@ -161,6 +161,7 @@
 
     <div class="content-wrapper-def hidden" id="PageWrap">
       <div class="content">
+        <div id="loader"></div>
         <!-- Overview begin -->
         <div id="PageOverview" class="hidden">
           <h2 class="content-head is-center">Overview</h2>
