Fixed graphs and table scaling
Fixed a bug where the overview graphs and the transaction table would not resize properly

--- a/new/index.html
+++ b/new/index.html
@@ -62,11 +62,11 @@
         <div class="splash">
           <h1 class="splash-head home-dropzone">Drop .csv here</h1>
           <p class="splash-subhead">
-            Your privacy matters. As this project is exposed to sensitive data, it's 100% open source. <br />Do not
-            share your nexo.io login with anyone.
+            Your privacy matters. As this project is exposed to sensitive data, it's 100% open source. <br />Do not share your
+            nexo.io login with anyone.
           </p>
           <p>
-            <a href="http://purecss.io" class="pure-button pure-button-primary"
+            <a href="https://github.com/bandrewk/nexotransactionanalyzer" class="pure-button pure-button-primary"
               ><i class="fa fa-github" aria-hidden="true"></i> Browse Source Code</a
             ><br /><br /><a href="http://purecss.io" class="pure-button pure-button-primary"
               ><i class="fa fa-play-circle-o" aria-hidden="true"></i> Demo</a
@@ -107,8 +107,8 @@
                 Stay safe
               </h3>
               <p>
-                Do not share your nexo.io login. This app only uses the exported transactions .csv file. It has no
-                persistend storage, data is immediatley deleted upon refresh.
+                Do not share your nexo.io login. This app only uses the exported transactions .csv file. It has no persistend
+                storage, data is immediatley deleted upon refresh.
               </p>
             </div>
           </div>
@@ -142,19 +142,17 @@
               <h2>Notice of Non-Affiliation and Disclaimer</h2>
 
               <p>
-                We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo
-                Financial LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can
-                be found at https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are
-                registered trademarks of their respective owners.
+                We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo Financial
+                LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be found at
+                https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered trademarks
+                of their respective owners.
               </p>
             </div>
           </div>
           <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" />
         </div>
 
-        <div class="footer l-box is-center">
-          © Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.
-        </div>
+        <div class="footer l-box is-center">© Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.</div>
       </div>
     </div>
     <!-- home end -->
@@ -174,8 +172,8 @@
                 <!--<div class="pure-u-5-5 pure-u-lg-3-4 overview-graph" id="ov-graph-portfolio"></div>-->
                 <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line1"></div>
                 <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie1"></div>
-                <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line2"></div>
-                <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie2"></div>
+                <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line2" style="margin-bottom: 2em"></div>
+                <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie2" style="margin-bottom: 2em"></div>
               </div>
 
               <hr />
@@ -217,18 +215,16 @@
             <h2>Notice of Non-Affiliation and Disclaimer</h2>
 
             <p>
-              We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo
-              Financial LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can
-              be found at https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are
-              registered trademarks of their respective owners.
+              We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo Financial
+              LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be found at
+              https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered trademarks of
+              their respective owners.
             </p>
           </div>
           <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" style="padding-bottom: 2px" />
         </div>
       </div>
-      <div class="footer l-box is-center">
-        © Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.
-      </div>
+      <div class="footer l-box is-center">© Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.</div>
     </div>
   </body>
 </html>
