--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A layout example that shows off a responsive product landing page." />
-    <title>Landing Page &ndash; Layout Examples &ndash; Pure</title>
+    <title>Nexo Transaction Analyzer</title>
 
     <!-- PURE CDN -->
     <link
@@ -28,6 +28,9 @@
 
     <!-- Plotly CDN -->
     <script src="https://cdn.plot.ly/plotly-2.4.2.min.js"></script>
+
+    <!-- SweetAlert2 CDN -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Local -->
     <link rel="stylesheet" href="/css/styles.css" />
@@ -121,7 +124,7 @@
             <i class="fa fa-regular fa-code fa-5x" style="color: var(--third-color)"></i>
           </div>
           <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-            <h2 class="content-head content-head-ribbon">❗Hey, this project Still in development❗</h2>
+            <h2 class="content-head content-head-ribbon">❗Hey, this website is still in beta❗</h2>
 
             Some features may not work yet. Such as:
             <ul>
@@ -131,8 +134,6 @@
             </ul>
 
             If you're brave enough send me a failed .csv to cheesecake@mom.com.
-            <br />
-            Also, nexo tends to break their .csv export function rather often. As of today, it's broken.
           </div>
         </div>
 
@@ -145,14 +146,18 @@
                 We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo Financial
                 LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be found at
                 https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered trademarks
-                of their respective owners.
+                of their respective owners. <br /><br />
+                Created by bandrewk. Support development & this website:<br />
+                ETH: <> <br />BTC: <> <br />RVN: <>
               </p>
             </div>
           </div>
           <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" />
         </div>
 
-        <div class="footer l-box is-center">© Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.</div>
+        <div class="footer l-box is-center">
+          © Copyright 2021-2022 nexo-ta.com. This is a non-commercial, not monetized website.
+        </div>
       </div>
     </div>
     <!-- home end -->
@@ -224,7 +229,9 @@
           <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" style="padding-bottom: 2px" />
         </div>
       </div>
-      <div class="footer l-box is-center">© Copyright 2021-2022 bandrewk. This is a non-commercial, not monetized website.</div>
+      <div class="footer l-box is-center">
+        © Copyright 2021-2022 nexo-ta.com. This is a non-commercial, not monetized website.
+      </div>
     </div>
   </body>
 </html>
