Added demo, reworked tx linkage
Added demo data, refactored tx linkage, minor fixes

--- a/new/index.html
+++ b/new/index.html
@@ -69,9 +69,13 @@
             nexo.io login with anyone.
           </p>
           <p>
-            <a href="https://github.com/bandrewk/nexotransactionanalyzer" class="pure-button pure-button-primary"
+            <a
+              href="https://github.com/bandrewk/nexotransactionanalyzer"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="pure-button pure-button-primary"
               ><i class="fa fa-github" aria-hidden="true"></i> Browse Source Code</a
-            ><br /><br /><a href="http://purecss.io" class="pure-button pure-button-primary"
+            ><br /><br /><a href="#" class="pure-button pure-button-primary" id="btnDemo"
               ><i class="fa fa-play-circle-o" aria-hidden="true"></i> Demo</a
             >
           </p>
