Added support for all blockchain explorers and API changes
Added support for all blockchain explorers (not tested yet) and for native nexo api to grab currency icons

--- a/new/index.html
+++ b/new/index.html
@@ -46,13 +46,13 @@
             <a href="" class="pure-menu-link" id="btn-home">Home</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link" id="btn-overview">Overview</a>
+            <a href="#" class="pure-menu-link hidden" id="btn-overview">Overview</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link" id="btn-coinlist">Coinlist</a>
+            <a href="#" class="pure-menu-link hidden" id="btn-coinlist">Coinlist</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link" id="btn-transactions">Transactions</a>
+            <a href="#" class="pure-menu-link hidden" id="btn-transactions">Transactions</a>
           </li>
         </ul>
       </div>
@@ -65,8 +65,9 @@
         <div class="splash">
           <h1 class="splash-head home-dropzone">Drop .csv here</h1>
           <p class="splash-subhead">
-            Your privacy matters. As this project is exposed to sensitive data, it's 100% open source. <br />Do not share your
-            nexo.io login with anyone.
+            Your privacy matters. As this project is exposed to sensitive data, it's 100% open source. <br /><b
+              >Do not share your nexo.io login. We'll never ask for any login data or wallet access.</b
+            >
           </p>
           <p>
             <a
@@ -106,7 +107,7 @@
                 <i class="fa fa-th-large"></i>
                 Graphs
               </h3>
-              <p>Visualize your portfolio.</p>
+              <p>Visualize your portfolio using graphs and charts.</p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
               <h3 class="content-subhead">
@@ -128,16 +129,19 @@
             <i class="fa fa-regular fa-code fa-5x" style="color: var(--third-color)"></i>
           </div>
           <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-            <h2 class="content-head content-head-ribbon">❗Hey, this website is still in beta❗</h2>
+            <h2 class="content-head content-head-ribbon">❗beta version❗</h2>
 
             Some features may not work yet. Such as:
             <ul>
               <li>Loan tracking</li>
               <li>Transaction linkage to blockchain explorer (TX linkage) for all currencies</li>
               <li>Rejected transactions</li>
+              <li>Transactions for coins where more than one network is supported</li>
             </ul>
 
-            If you're brave enough send me a failed .csv to cheesecake@mom.com.
+            Most of these features are not implemented because I simply did not see them yet.<br />
+            If you encounter trouble or want to help development send me a .csv to hello@nexo-ta.com. Data will be used in a
+            discrete manner.
           </div>
         </div>
 
@@ -151,7 +155,7 @@
                 LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be found at
                 https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered trademarks
                 of their respective owners. <br /><br />
-                Created by bandrewk. Support development & this website:<br />
+                Created by bandrewk. Support development:<br />
                 ETH: <> <br />BTC: <> <br />RVN: <>
               </p>
             </div>
